force-app/main/default/objects/Ireland_Coaching__c/fields/Researched_Customer_Issue__c.field-meta.xml
<CustomField>
    <fullName>Researched_Customer_Issue__c</fullName>
    <inlineHelpText>Properly researched customer issue</inlineHelpText>
    <label>Researched Customer Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>