force-app/main/default/objects/Ireland_Coaching__c/fields/Researched_Customer_Issue_Comment__c.field-meta.xml
<CustomField>
    <fullName>Researched_Customer_Issue_Comment__c</fullName>
    <inlineHelpText>Properly researched customer issue comment</inlineHelpText>
    <label>Researched Customer Issue Comment</label>
    <type>TextArea</type>
</CustomField>