force-app/main/default/objects/Ireland_Coaching__c/fields/Retention_Offered__c.field-meta.xml
<CustomField>
    <fullName>Retention_Offered__c</fullName>
    <inlineHelpText>Appropriate retention offered</inlineHelpText>
    <label>Retention Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>