force-app/main/default/objects/Ireland_Coaching__c/fields/Retention_Offered_Comment__c.field-meta.xml
<CustomField>
    <fullName>Retention_Offered_Comment__c</fullName>
    <label>Retention Offered Comment</label>
    <type>TextArea</type>
</CustomField>