force-app/main/default/objects/Ireland_Coaching__c/fields/Score_Comment__c.field-meta.xml
<CustomField>
    <fullName>Score_Comment__c</fullName>
    <inlineHelpText>% Score comment</inlineHelpText>
    <label>% Score Comment</label>
    <type>TextArea</type>
</CustomField>