force-app/main/default/objects/Ireland_Coaching__c/fields/Secondary_Offer_Details__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Offer_Details__c</fullName>
    <inlineHelpText>What secondary offer was made</inlineHelpText>
    <label>Secondary Offer Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month Free</fullName>
            </value>
            <value>
                <fullName>2 Months Free</fullName>
            </value>
            <value>
                <fullName>3 Months Free</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 55.00 Annual</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 49.50 Annual</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 35.00 Annual</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 29.00 Annual</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 37.50 Bi-Annual</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 6 Month Promo 4.99 Monthly</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 5.50 Monthly</fullName>
            </value>
            <value>
                <fullName>eFax - GBP 3.50 Monthly</fullName>
            </value>
            <value>
                <fullName>eFax - Euro 99.00 Annual</fullName>
            </value>
            <value>
                <fullName>eFax - Euro 69.50 Annual (1 Year)</fullName>
            </value>
            <value>
                <fullName>eFax - Euro 39.00</fullName>
            </value>
            <value>
                <fullName>eFax - Euro 5.49 Monthly</fullName>
            </value>
            <value>
                <fullName>eFax - Euro 4 Month Promo 2.50 Monthly</fullName>
            </value>
            <value>
                <fullName>eFax - USD 50.00 Annual</fullName>
            </value>
            <value>
                <fullName>eFax - USD 5.00 Monthly</fullName>
            </value>
            <value>
                <fullName>eFax - USD 2.95 Monthly</fullName>
            </value>
            <value>
                <fullName>MyFax - USD 20.00 Monthly</fullName>
            </value>
            <value>
                <fullName>MyFax - USD 10.00 Monthly</fullName>
            </value>
            <value>
                <fullName>MyFax - USD 5.00 Monthly</fullName>
            </value>
            <value>
                <fullName>MyFax - Euro 9.00 Monthly</fullName>
            </value>
            <value>
                <fullName>MyFax - Euro 4.50 Monthly</fullName>
            </value>
            <value>
                <fullName>MyFax - Euro 6.00 Monthly</fullName>
            </value>
            <value>
                <fullName>MyFax - GBP 3.00 Monthly</fullName>
            </value>
            <value>
                <fullName>Voice - Downgrade Plan</fullName>
            </value>
            <value>
                <fullName>Voice - Annual Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>