force-app/main/default/objects/Ireland_Coaching__c/fields/Secondary_Offer_Details_Comment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Offer_Details_Comment__c</fullName>
    <inlineHelpText>What secondary offer was made comment</inlineHelpText>
    <label>Secondary Offer Details Comment</label>
    <type>TextArea</type>
</CustomField>