force-app/main/default/objects/Ireland_Coaching__c/fields/Secondary_Offer_Made__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Offer_Made__c</fullName>
    <description>Was there a secondary offer made</description>
    <label>Secondary Offer Made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>