force-app/main/default/objects/Ireland_Coaching__c/fields/Secondary_Offer_Made_Comment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Offer_Made_Comment__c</fullName>
    <inlineHelpText>Was there a secondary offer made comment</inlineHelpText>
    <label>Secondary Offer Made Comment</label>
    <type>TextArea</type>
</CustomField>