force-app/main/default/objects/Ireland_Coaching__c/fields/Sent_an_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_an_Email__c</fullName>
    <inlineHelpText>Sent an email to the customer (info, instructions, confirmation etc)</inlineHelpText>
    <label>Sent an Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>