force-app/main/default/objects/Ireland_Coaching__c/fields/Sent_an_Email_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sent_an_Email_Comment__c</fullName>
    <inlineHelpText>Sent an email to the customer (info, instructions, confirmation etc) comment</inlineHelpText>
    <label>Sent an Email Comment</label>
    <type>TextArea</type>
</CustomField>