force-app/main/default/objects/Ireland_Coaching__c/fields/Tone_and_Energy__c.field-meta.xml
<CustomField>
    <fullName>Tone_and_Energy__c</fullName>
    <inlineHelpText>Opening tone and energy</inlineHelpText>
    <label>Tone and Energy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>