force-app/main/default/objects/Ireland_Coaching__c/fields/Tone_and_Energy_Comment__c.field-meta.xml
<CustomField>
    <fullName>Tone_and_Energy_Comment__c</fullName>
    <inlineHelpText>Opening tone and energy comment</inlineHelpText>
    <label>Tone and Energy Comment</label>
    <type>TextArea</type>
</CustomField>