force-app/main/default/objects/Ireland_Coaching__c/fields/Tone_Etiquette_and_Politeness__c.field-meta.xml
<CustomField>
    <fullName>Tone_Etiquette_and_Politeness__c</fullName>
    <inlineHelpText>Tone, etiquette and politeness (please and thank you)</inlineHelpText>
    <label>Tone, Etiquette and Politeness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>