force-app/main/default/objects/Ireland_Coaching__c/fields/Tone_Etiquette_and_Politeness_Comment__c.field-meta.xml
<CustomField>
    <fullName>Tone_Etiquette_and_Politeness_Comment__c</fullName>
    <inlineHelpText>Tone, etiquette and politeness (please and thank you) comment</inlineHelpText>
    <label>Tone, Etiquette and Politeness Comment</label>
    <type>TextArea</type>
</CustomField>