force-app/main/default/objects/Ireland_Coaching__c/fields/Understanding_of_Customer_Issues_Comment__c.field-meta.xml
<CustomField>
    <fullName>Understanding_of_Customer_Issues_Comment__c</fullName>
    <label>Understanding of Customer Issues Comment</label>
    <type>TextArea</type>
</CustomField>