force-app/main/default/objects/Ireland_Coaching__c/fields/Upsell_Offers__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Offers__c</fullName>
    <inlineHelpText>Made appropriate upsell offers</inlineHelpText>
    <label>Upsell Offers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>