force-app/main/default/objects/Ireland_Coaching__c/fields/Upsell_Offers_Comment__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Offers_Comment__c</fullName>
    <label>Upsell Offers Comment</label>
    <type>TextArea</type>
</CustomField>