force-app/main/default/objects/Ireland_Coaching__c/fields/Upsell_Possibilities__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Possibilities__c</fullName>
    <inlineHelpText>Probed for upsell possibilities</inlineHelpText>
    <label>Upsell Possibilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>