force-app/main/default/objects/Ireland_Coaching__c/fields/Upsell_Possibilities_Comnment__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Possibilities_Comnment__c</fullName>
    <inlineHelpText>Probed for upsell possibilities comments</inlineHelpText>
    <label>Upsell Possibilities Comnment</label>
    <type>TextArea</type>
</CustomField>