force-app/main/default/objects/Ireland_Coaching__c/fields/Utilzation_of_Customers_Name__c.field-meta.xml
<CustomField>
    <fullName>Utilzation_of_Customers_Name__c</fullName>
    <inlineHelpText>Was Utilzation of customers name done throughout the call</inlineHelpText>
    <label>Utilzation of Customers Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>