force-app/main/default/objects/Ireland_Coaching__c/fields/Utilzation_of_Customers_Name_Comment__c.field-meta.xml
<CustomField>
    <fullName>Utilzation_of_Customers_Name_Comment__c</fullName>
    <inlineHelpText>Was Utilzation of customers name done throughout the call comment</inlineHelpText>
    <label>Utilzation of Customers Name Comment</label>
    <type>TextArea</type>
</CustomField>